# exterminate

./: .gitignore  CMakeLists.txt  README.md  ex.cmd  exterminate.cmd  exterminate.ps1  install.cmd  install.ps1
config/: exterminate.config.json
registry/: context-menu-install.reg  context-menu-uninstall.reg
src/: app.cpp  app.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  delete_engine.cpp  delete_engine.hpp  install.cpp  install.hpp  main.cpp  paths.cpp  paths.hpp  windows_env.cpp  windows_env.hpp
src/Exterminate/: Exterminate.csproj  Program.cs
src/Exterminate.Context/: Exterminate.Context.csproj  Program.cs
src/Exterminate/Models/: AppConfig.cs  CliOptions.cs  DeleteResult.cs
src/Exterminate/Services/: ConfigService.cs  ConsoleWindowService.cs  DeleteEngine.cs  ExterminateJsonContext.cs  InstallerService.cs  PathService.cs  PrivilegeService.cs  ProcessRunner.cs
